Fixed problem with carousel height on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,12 +411,19 @@ hr {
 }
 
 .carousel-inner {
-    width: 80%;
+    width: auto;
     margin: 0 auto 0 auto;
 }
 
 .carousel {
     background-color: #0f0707;
+}
+
+.h-100 {
+    height: 100vh!important;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /*-----------Contact.html-----------*/
